// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.P2 should render default markup when no props are passed 1`] = `
<p
  className="p2 p2--regular p2--onyx-base XygHP"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render with a custom color prop that lacks variants 1`] = `
<p
  className="p2 p2--regular p2--brand-base iutQIo"
  color="brand"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render with a custom weight prop 1`] = `
<p
  className="p2 p2--semiBold p2--onyx-base jhfVxm"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render with a textTransform prop 1`] = `
<p
  className="p2 p2--regular p2--onyx-base grGuQm"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render with custom color and variant props 1`] = `
<p
  className="p2 p2--regular p2--accent01-dark bGYrvE"
  color="accent01"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render without a theme 1`] = `
<p
  className="p2 p2--regular p2--onyx-base XygHP"
/>
`;

exports[`Typography.P2 should render without children 1`] = `
<p
  className="p2 p2--regular p2--onyx-base XygHP"
/>
`;
